- Notification functions in the CmsAdminThemeBase function are now just stubs and do nothing.  Will be removed at a later date.
- Removed the GetNotificationOutput() method from the module API.
- Adds classes for creating Alerts.. this is much more advanced than te old Notifications system.
- Refactored the OneEleven admin theme to use new Alerts classes instead of old Notifications

CmsJobManager
- New core module to handle queued asynchronous tasks.

Content Manager
- Minor tweak to bulk delete pages.
- Minor fix to the active tab when changing a template or design.

DesignManager
- Move the designs tab of the main interface into third position.
- Implement sorting in edit design.
- Remove option menus (for now) from templates, stylesheets, and designs tab.
- Modify the template list functionality in edit-design to allow using keyboard control.   space or + to select an item on the left, and right arrow to move
- Modify the edit-design functionality to allow clicking on an attached template or stylesheet to edit it.
- Generic templates now display a usage string.
- When creating a new template, associate the new template with the default design.
- Add reset buttons to the filter forms.

News v2.50.5
- Minor fix to add category.
- Removes GetNotificationOutput method.
- adda a task that runs at least every 15 minutes to detect draft articles... create an alert for this.
- add an option to never create alerts about draft News articles.

FileManager v1.6
- Move settings to it's own menu item under site-admin
- Fix minor problem with moving a directory.

Phar Installer v1.2
- A database account password is now required
- Upgrade routine now asks for, and tests database credentials
- Upgrade routine now rewrites the config.php file (but keeps a backup)

Search
- Convert to store all data using the InnoDB engine
- Use transactions for the addwords and deletewords stuff for performance.
- Fix problem with query and record expiry.