@@ -151,6 +151,7 @@ $lang['cms_version'] = "CMSMS Version";
 $lang['code'] = "Code";
 $lang['config_information'] = "CMS Made Simple Config Settings";
 $lang['config_writable'] = "config.php writeable. It is more safe if you change permission to read-only";
+$lang['config_issue'] = 'Configuration Issue';
 $lang['confirm'] = "Confirm";
 $lang['confirmcancel'] = "Are you sure you want to discard your changes? Click OK to discard all changes. Click Cancel to continue editing.";
 $lang['confirmdefault'] = "Are you sure you want to set - %s - as site default page?";
@@ -1354,6 +1355,7 @@ $lang['search_module'] = "Search module";
 $lang['search_string_find'] = "Connection ok!";
 $lang['secure'] = "Secure (HTTPS)";
 $lang['secure_page'] = "Use HTTPS for this page";
+$lang['security_issue'] = 'Security Issue';
 $lang['selectall'] = "Select All";
 $lang['selecteditems'] = "With Selected";
 $lang['selectgroup'] = "Select Group";
